# gum-essentials

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  gum-cmake-gen.conf  tex.h
examples/: ArgumentTest.cpp  CMakeLists.txt  ImageToHeaderConverter.cpp  Playground.cpp  Window.cpp
include/SFML/Window/Android/: InputImpl.hpp  WindowImplAndroid.hpp
include/SFML/Window/OSX/: HIDInputManager.hpp  HIDInputManager.mm  InputImpl.hpp  InputImpl.mm
include/SFML/Window/Unix/: InputImpl.hpp
include/SFML/Window/Win32/: InputImpl.hpp  WindowImplWin32.hpp
include/SFML/Window/iOS/: InputImpl.hpp  InputImpl.mm
include/freetype2/freetype/config/: ftconfig.h  ftoption.h
include/libxml/: xmlversion.h
src/: CMakeLists.txt  Config.cmake.in  gum-essentials.h
src/Essentials/: Argument.h  ArgumentParser.cpp  ArgumentParser.h  BoundingBox.h  Clock.cpp  Clock.h  Compression.h  Crate.h  Display.cpp  Display.h  FPS.cpp  FPS.h  GLContext.cpp  GLContext.h  ImageData.h  MemoryManagement.h  Noise.h  Output.cpp  Output.h  Serialization.h  SerializationData.cpp  SerializationData.h  Settings.cpp  Settings.h  SmoothFloat.h  Time.cpp  Time.h  Tools.cpp  Tools.h  Unicode.cpp  Unicode.h  Window.cpp  Window.h  XMLReader.cpp  XMLReader.h  XMLWriter.cpp
src/Essentials/Filesystem/: FileDialog.cpp  FileDialog.h  Filesystem.cpp  Filesystem.h  TextureLoader.cpp  TextureLoader.h  XMLNode.h  XMLReader.cpp  XMLReader.h  XMLWriter.cpp  XMLWriter.h
src/Essentials/Input/: Controls.cpp  Controls.h  Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/Essentials/Noise/: CellularNoise.cpp  FBMNoise.cpp  GradientNoise.cpp  HexagonsNoise.cpp  Noise.cpp  NoiseHashes.cpp  Patterns.cpp  PerlinNoise.cpp  VoronoiNoise.cpp
