message(STATUS "Examples: CXXFLAGS: ${CMAKE_CXX_FLAGS}")

list(APPEND GUM_LIBRARIES ${CMAKE_THREAD_LIBS_INIT})

 
        list(APPEND GUM_LIBRARIES ${CMAKE_PROJECT_NAME}) 
        if(GUMMATHS_FOUND)
            list(APPEND GUM_LIBRARIES ${GUMMATHS_LIBRARIES})
        else()
            message(FATAL_ERROR Library for GUMMATHS cannot not found)
        endif() 
        if(GUMSYSTEM_FOUND)
            list(APPEND GUM_LIBRARIES ${GUMSYSTEM_LIBRARIES})
        else()
            message(FATAL_ERROR Library for GUMSYSTEM cannot not found)
        endif() 
        if(DEFINED GUM_OS_BSD)
        if(X11_FOUND)
            list(APPEND GUM_LIBRARIES ${X11_LIBRARIES})
        else()
            message(FATAL_ERROR Library for X11 cannot not found)
        endif() 
    endif() 
        if(DEFINED GUM_OS_LINUX)
        if(X11_FOUND)
            list(APPEND GUM_LIBRARIES ${X11_LIBRARIES})
        else()
            message(FATAL_ERROR Library for X11 cannot not found)
        endif() 
    endif() 
        if(DEFINED GUM_OS_BSD)
        if(GTK2_FOUND)
            list(APPEND GUM_LIBRARIES ${GTK2_LIBRARIES})
        else()
            message(FATAL_ERROR Library for GTK2 cannot not found)
        endif() 
    endif() 
        if(DEFINED GUM_OS_LINUX)
        if(GTK2_FOUND)
            list(APPEND GUM_LIBRARIES ${GTK2_LIBRARIES})
        else()
            message(FATAL_ERROR Library for GTK2 cannot not found)
        endif() 
    endif()

include_directories(${CMAKE_SOURCE_DIR}/src/)
 
        if(GUMMATHS_FOUND)
            include_directories(${GUMMATHS_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for GUMMATHS cannot not found)
        endif() 
        if(GUMSYSTEM_FOUND)
            include_directories(${GUMSYSTEM_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for GUMSYSTEM cannot not found)
        endif() 
        if(DEFINED GUM_OS_BSD)
        if(X11_FOUND)
            include_directories(${X11_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for X11 cannot not found)
        endif() 
    endif() 
        if(DEFINED GUM_OS_LINUX)
        if(X11_FOUND)
            include_directories(${X11_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for X11 cannot not found)
        endif() 
    endif() 
        if(DEFINED GUM_OS_BSD)
        if(GTK2_FOUND)
            include_directories(${GTK2_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for GTK2 cannot not found)
        endif() 
    endif() 
        if(DEFINED GUM_OS_LINUX)
        if(GTK2_FOUND)
            include_directories(${GTK2_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for GTK2 cannot not found)
        endif() 
    endif() 
    include_directories(${CMAKE_SOURCE_DIR}/external/libxml2/include) 
    include_directories(${CMAKE_BINARY_DIR}/external/libxml2) 
    include_directories(${CMAKE_SOURCE_DIR}/external/assimp/include)

link_directories(${CMAKE_BINARY_DIR}/src/)

add_definitions(-DEXAMPLES_PATH=\"${CMAKE_SOURCE_DIR}/examples\")

set(EXAMPLE_FILE_LIST ImageToHeaderConverter)

foreach(EXAMPLE ${EXAMPLE_FILE_LIST})
    message(STATUS "Adding target ${EXAMPLE}")
    add_executable(Example_${EXAMPLE} "./${EXAMPLE}.cpp")
    target_link_libraries(Example_${EXAMPLE} "${GUM_LIBRARIES}")
endforeach()
